--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # client side
-npm i react-router-dom
+npm i react-router-dom react-tostify react-avatar
 
 # server side
 npm i cors nodemon express socket.io socket.io-client
